force-app/main/default/src/objects/PJN_AE_Reaction__c/PJN_AE_Reaction__c.object-meta.xml
<CustomObject>
    <label>AE Reaction</label>
    <nameField>
        <displayFormat>AE-RE-{00000000}</displayFormat>
        <label>AE Reaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Reactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>