force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Caused_Prolonged_Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caused_Prolonged_Hospitalization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E2B (R2): Moved from A.1.5 (AE Object)

E2B (R3): E.i.3.2c Caused/Prolonged Hospitalization
Conformance: Required
Data Type: Boolean
OID: None
Value Allowed: true nullFlavor: NI</description>
    <inlineHelpText>The seriousness criteria of the reaction/event should be based on the definitions provided in the ICH E2A and E2D guidelines. More than one seriousness criteria can be chosen. If the event is not serious, all of these data elements should be left blank.</inlineHelpText>
    <label>Caused/Prolonged Hospitalization</label>
    <type>Checkbox</type>
</CustomField>