force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Confirmed_by_HCP__c.field-meta.xml
<CustomField>
    <fullName>PJN_Confirmed_by_HCP__c</fullName>
    <description>E2B (R2):  moved from A.1.14 (AE Object)

E2B (R3):  E.i.8 Medical Confirmation by Healthcare Professional
Conformance: Optional
Data Type: Boolean
OID: None
Value Allowed: false, true</description>
    <inlineHelpText>If an event is reported by a non healthcare professional (e.g. lawyers, consumers), this data element indicates whether the occurrence of the event was subsequently confirmed by a healthcare professional.</inlineHelpText>
    <label>Confirmed by HCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>