force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Country_Where_Reaction_Occurred__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country_Where_Reaction_Occurred__c</fullName>
    <description>E2B (R2): moved from A.1.2 (AE Object)

E2B (R3): Identification of the Country Where the Reaction / Event Occurred
Conformance: Optional
Data Type: 2A
OID: 1.0.3166.1.2.2
Value Allowed: ISO 3166-1 alpha-2, EU</description>
    <inlineHelpText>This data element captures the country where the reaction occurred.</inlineHelpText>
    <label>Country Where Reaction/Event Occurred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>