force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Last_Use_Time_Interval_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Use_Time_Interval_Unit__c</fullName>
    <description>E2B (R2): B.2.i.7.2b, reactionlasttimeunit (3N)

E2B (R3): Moved to G.k.4r (AE Drug)</description>
    <label>Last Use Time Interval Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Time_Units</valueSetName>
    </valueSet>
</CustomField>