force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_MedDRA_Version_LLT__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Version_LLT__c</fullName>
    <description>E2B (R2): B.2.i.1.a, reactionmeddraversionllt (8AN)

E2B (R3): E.i.2.1a MedDRA Version for Reaction / Event
Conformance: Required
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element provides the MedDRA version</inlineHelpText>
    <label>MedDRA Version (LLT)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>