force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_MedDRA_Version_PT__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Version_PT__c</fullName>
    <description>E2B (R2): B.2.i.2.a, reactionmeddraversionpt (8AN)

E2B (R3): NA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MedDRA Version (PT)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>