force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Reaction_Event_as_Reported_en__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction_Event_as_Reported_en__c</fullName>
    <description>E2B (R2): B.2.i.0, primarysourcereaction (200AN)

E2B (R3): E.i.1.2 Reaction / Event as Reported by the Primary Source for Translation
Conformance: Optional
Data Type: 250AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the original reporter&apos;s words and/or short phrases used to describe the reaction/event should be provided in an English translation for international transmission.</inlineHelpText>
    <label>Reaction/Event as Reported (English)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>