force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Reaction_Event_as_Reported_Native__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction_Event_as_Reported_Native__c</fullName>
    <description>E2B (R2): NA

E2B (R3): E.i.1.1a Reaction / Event as Reported by the Primary Source in Native Language
Conformance: Optional
Data Type: 250AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element captures the original reporter&apos;s words and/or short phrases used to describe the reaction/event. Text should be provided in the native language it was received, when it is received in a language other than English.</inlineHelpText>
    <label>Reaction/Event as Reported (Native)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>