force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Reaction_Event_as_Source_Langauge__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction_Event_as_Source_Langauge__c</fullName>
    <description>E2B (R2): NA

E2B (R3): E.i.1.1b Reaction / Event as Reported by the Primary Source Language
Conformance: Optional, but required if E.i.1.1a is populated.
Data Type: 3A
OID: 2.16.840.1.113883.6.100
Value Allowed: ISO 639-2/RA, alpha-3</description>
    <inlineHelpText>Provide the language used to describe the reaction/event</inlineHelpText>
    <label>Reaction/Event as Source Langauge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Language</valueSetName>
    </valueSet>
</CustomField>