force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Reaction_Event_MedDRA_Term_LLT__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction_Event_MedDRA_Term_LLT__c</fullName>
    <description>E2B (R2): B.2.i.1.b, reactionmeddrallt (250AN)

E2B (R3): E.i.2.1b Reaction / Event (MedDRA code)
Conformance: Required
Data Type: 8N
OID: 2.16.840.1.113883.6.163
Value Allowed: Numeric</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element captures the MedDRA LLT most closely corresponding to the reaction/event as reported by the primary source. In the exceptional circumstance when a MedDRA term cannot be found, the sender should use clinical judgment to complete this item</inlineHelpText>
    <label>Reaction/Event MedDRA Term (LLT)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>