force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Reaction_Event_MedDRA_Term_PT__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reaction_Event_MedDRA_Term_PT__c</fullName>
    <description>E2B (R2): B.2.i.1.b, reactionmeddrapt (250AN)

E2B (R3): NA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reaction/Event MedDRA Term (PT)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>