force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Start_Date_of_Reaction_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Start_Date_of_Reaction_Event__c</fullName>
    <description>E2B (R2): B.2.i.4.a, reactionstartdateformat (3N) B.2.i.4.b, reactionstartdate (12N)

E2B (R3): E.i.4 Date of Start of Reaction / Event
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information. nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element captures the date of the start of the reaction/event.When multiple terms are reported and the reporter does not provide a specific onset date for each reaction/event, it should be populated with the start date of the first symptom.</inlineHelpText>
    <label>Start Date of Reaction/Event</label>
    <type>Date</type>
</CustomField>