force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Term_Highlighted_by_Reporter__c.field-meta.xml
<CustomField>
    <fullName>PJN_Term_Highlighted_by_Reporter__c</fullName>
    <description>E2B (R2): B.2.i.3, termhighlighted (1N)

E2B (R3): E.i.3.1 Term Highlighted by the Reporter
Conformance: Optional
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.10
Value Allowed: 1 = Yes, highlighted by the reporter, NOT serious
2 = No, not highlighted by the reporter, NOT serious 3 = Yes, highlighted by the reporter, SERIOUS
4 = No, not highlighted by the reporter, SERIOUS</description>
    <inlineHelpText>A highlighted term is a reaction/event that the primary source indicated was a major concern or reason for reporting the case. If the information is not explicitly provided by the initial reporter the term should not be considered a highlighted term.</inlineHelpText>
    <label>Term Highlighted by Reporter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>