force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Time_Btwn_First_Use_Reaction_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Time_Btwn_First_Use_Reaction_Event__c</fullName>
    <description>E2B (R2): B.2.i.7.1a, reactionfirsttime (5N)

E2B (R3): Moved to G.k.4r (AE Drug)</description>
    <label>Time Between First Use &amp; Reaction/Event</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>