force-app/main/default/src/objects/PJN_AE_Reaction__c/fields/PJN_Time_Start_of_Drug_Reaction_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Time_Start_of_Drug_Reaction_Event__c</fullName>
    <description>E2B (R2): B.2.i.7.1b, reactionfirsttimeunit (3N)

E2B (R3): Moved to G.k.4r (AE Drug)</description>
    <label>First Use Time Interval Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Time_Units</valueSetName>
    </valueSet>
</CustomField>