force-app/main/default/src/objects/PJN_AE_Reaction__c/recordTypes/PJN_AE_Reaction.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Reaction</fullName>
    <active>true</active>
    <label>AE Reaction</label>
</RecordType>