force-app/main/default/src/objects/PJN_AE_Reaction__c/recordTypes/PJN_AE_Reaction_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Reaction_Closed</fullName>
    <active>true</active>
    <label>AE Reaction - Closed</label>
</RecordType>